[project]
name = "agent-builder-class-hw1-manojkumary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "pandas>=3.0.3",
]
